--- a/app/design/frontend/Scottsbase/scottsprogram/web/css/source/_scottsprogramcheckout.scss
+++ b/app/design/frontend/Scottsbase/scottsprogram/web/css/source/_scottsprogramcheckout.scss
@@ -465,6 +465,7 @@
           color: $scottsprogram-orange;
       }
       .actions-toolbar {
+          margin-top: 0 !important;
           a.action-delete {
             color: $scottsprogram-orange;
           }
@@ -1700,8 +1701,7 @@
       padding-bottom:0;
     }
     .actions-toolbar.no-margin{
-      margin-top: 0 !important;
-      margin-bottom: -25px !important;
+      margin-top: 5px !important;
     }
   }
   .cart-container .form-cart .action.update{
@@ -2198,4 +2198,3 @@ div[name="shippingAddress.postcode"] {
     }
   }
 }
-
